--- a/src/Estilos/social.css
+++ b/src/Estilos/social.css
@@ -1,20 +1,34 @@
+:root{
+    --primary-color: #7843E9;
+    --primary-color-suave: #dcd7fd;
+    
+}
 .social{
     background-color: #fff;
     padding: .3rem;
     width: fit-content;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%)
 }
 .img-social{
+    background-color: #fff;
     width: 3rem;
+    border-radius: .5rem;
+    transition: all 0.3s;
+
 }
 .img-social a{
     width: 100%;
     display: block;
     padding: .4rem;
-    transition: background-color .3s easi;
 }
 .img-social img{
     width: 100%;
 }
 .img-social:hover{
-    background-color: var(--);
+    background-color: var(--primary-color-suave);
+}
+.correo-color{
+    background-color: black;
 }
