--- a/src/Estilos/social.css
+++ b/src/Estilos/social.css
@@ -1,34 +1,45 @@
-:root{
+:root {
     --primary-color: #7843E9;
     --primary-color-suave: #dcd7fd;
-    
 }
-.social{
+
+.social {
+    display: flex;
+    flex-direction: column;
     background-color: #fff;
     padding: .3rem;
     width: fit-content;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%)
+    transform: translateY(-50%);
 }
-.img-social{
+
+.img-social {
     background-color: #fff;
     width: 3rem;
     border-radius: .5rem;
     transition: all 0.3s;
+    display: inline-block; /* Asegura que el contenedor se ajuste al contenido */
+}
 
-}
-.img-social a{
-    width: 100%;
+.img-social a {
     display: block;
-    padding: .4rem;
-}
-.img-social img{
     width: 100%;
+    height: 100%;
+    padding: 0.4rem;
+    box-sizing: border-box; /* Incluye el padding dentro del tamaño total del elemento */
 }
-.img-social:hover{
+
+.img-social img {
+    width: 100%;
+    height: auto;
+    display: block; /* Elimina el espacio extra bajo la imagen */
+}
+
+.img-social:hover {
     background-color: var(--primary-color-suave);
 }
-.correo-color{
+
+.correo-color {
     background-color: black;
 }
