--- a/src/Estilos/section-hero-home.css
+++ b/src/Estilos/section-hero-home.css
@@ -5,7 +5,7 @@
 }
 .hero-home-inf{
     max-width: 1200px;
-    height: 500px;
+    height: 100vh;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -36,4 +36,7 @@
     font-size: 1rem;
     border-radius: .3rem;
     font-weight: 700;
+}
+#btn{
+    cursor: pointer;
 }
