--- a/src/Estilos/header.css
+++ b/src/Estilos/header.css
@@ -2,10 +2,7 @@
     padding: 0;
     margin: 0;
 }
-:root{
-    --primary-color: #7843E9
-    
-}
+
 *{
     margin: 0;
     padding: 0;
@@ -19,8 +16,10 @@ body{
     font-weight: 500;
 }
 .header{
+    width: 100%;
     padding: 15px 0;
     background-color: #fff;
+    position: fixed;
 }
 .header_content{
     margin: 0 auto;
