--- a/src/Estilos/social.css
+++ b/src/Estilos/social.css
@@ -4,6 +4,7 @@
     --primary-color-2: #a38ef7;
     --primary-color-3: #8660f2;
     --primary-color-4: #662cd5;
+    --secondary-color: #C0392B;
 }
 
 .social {
