--- a/src/Estilos/header.css
+++ b/src/Estilos/header.css
@@ -11,7 +11,6 @@
 
 }
 body{
-    background-color: #e8e8e8;
     font-family: "Onest", sans-serif;
     font-weight: 500;
 }
@@ -20,6 +19,7 @@ body{
     padding: 15px 0;
     background-color: #fff;
     position: fixed;
+    z-index: 1;
 }
 .header_content{
     margin: 0 auto;
@@ -77,3 +77,4 @@ body{
     width: 100%;
     height: 100%;
 }
+
