--- a/src/Estilos/section-hero-home.css
+++ b/src/Estilos/section-hero-home.css
@@ -1,13 +1,18 @@
+
 .home{
+    position: relative;
+    width: 100%;
     background: 
-    linear-gradient(to right, rgba(245, 245, 245, 0.4), rgba(245, 245, 245, 0.8)), 
+    linear-gradient(to right, rgba(245, 245, 245, 0.8), rgba(245, 245, 245, 1)), 
     url(../assets/common-bg.svg);
-    height: 100vh;
+    height: vh;
     padding-top: 120px;
+    display: flex;
     
 }
 .hero-home-inf{
     max-width: 1200px;
+    width: 100vw;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -25,22 +30,22 @@
     font-size: 1.1rem;
 }
 .hero-home-description span{
-    color: #C0392B;
+    color: var(--secondary-color);
 }
 .hero-home-inf .hero-home-button{
     margin-top: 80px;
 }
-.hero-home-inf .hero-home-button a{
-    letter-spacing: 1px;
+.button{
+    margin: 0 1rem;
     background-color: var(--primary-color);
     color: black;
-    padding: .8rem 4rem;
+    padding: .8rem 2rem;
     font-size: 1rem;
     border-radius: .3rem;
     font-weight: 700;
     transition: all .3s ease;
 }
-.hero-home-inf .hero-home-button a:hover{
+.button:hover{
     background-color: var(--primary-color-4);
     color: white;
 }
@@ -87,4 +92,40 @@
 }
 .custom-swal-wide{
     width: 25px;
+}
+.home-hero__mouse-scroll-cont {
+    margin: 100px 0;
+    position: absolute;
+    bottom: 3%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.mouse {
+    width: 25px;
+    height: 40px;
+    border: 2px solid #333;
+    border-radius: 60px;
+    position: relative;
+    overflow: hidden;
+}
+.mouse::before {
+    content: '';
+    width: 5px;
+    height: 5px;
+    position: absolute;
+    top: 7px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    border-radius: 50%;
+    opacity: 1;
+    animation: wheel 1.3s infinite;
+    -webkit-animation: wheel 1.3s infinite;
+}
+
+@keyframes wheel {
+    to {
+        opacity: 0;
+        top: 27px
+    }
 }
