--- a/src/Estilos/contact.css
+++ b/src/Estilos/contact.css
@@ -22,6 +22,7 @@ form{
     text-align: start;
     padding: 40px;
     background-color: white;
+    margin-bottom: 200px;
 }
 .form__group{
     position: relative;
