--- a/src/Estilos/projects.css
+++ b/src/Estilos/projects.css
@@ -4,10 +4,16 @@ section{
     padding-top: 5rem;
 }
 section h2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 2rem;
     font-weight: 600;
     margin-bottom: .4rem;
     text-align: center;
+}
+section h2 svg{
+    margin-right: 10px;
 }
 .proyectos .projects-all{
     flex: 0 0 auto; 
