--- a/src/Estilos/social.css
+++ b/src/Estilos/social.css
@@ -32,9 +32,10 @@
     height: 100%;
     padding: 0.4rem;
     box-sizing: border-box;
+    color: black;
 }
 
-.img-social img {
+.img-social svg {
     width: 100%;
     height: auto;
     display: block; 
