change stiles - Add responsive

--- a/src/Estilos/contact.css
+++ b/src/Estilos/contact.css
@@ -71,7 +71,7 @@ form label{
     align-items: center;
     margin: 0 1rem;
     background-color: var(--primary-color);
-    color: black;
+    color: white;
     padding: .8rem 2rem;
     font-size: 1rem;
     border-radius: .3rem;
