--- a/src/Estilos/header.css
+++ b/src/Estilos/header.css
@@ -82,4 +82,21 @@ body{
     width: 100%;
     height: 100%;
 }
-
+.header_main-responsive{
+    display: none;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    color: black;
+}
+@media screen and (max-width: 910px) {
+    .header{
+        position: relative;
+    }
+    .header_main-responsive{
+        display: flex;
+    }
+    .header_main{
+        display: none;
+    }
+}
