Responsive header and hero home

--- a/src/Estilos/about.css
+++ b/src/Estilos/about.css
@@ -65,3 +65,14 @@
     box-sizing: border-box;
     text-align: center;
 }
+@media (min-width: 768px) {
+    
+}
+
+@media (min-width: 124px) {
+
+}
+
+@media (max-width: 1280px) {
+
+}
