--- a/src/Estilos/section-hero-home.css
+++ b/src/Estilos/section-hero-home.css
@@ -15,11 +15,14 @@ html{
     justify-content: center;
 }
 .home{
+    max-width: none;
     position: relative;
+    width: 100vw;
     height: 100vh;
     background: 
     linear-gradient(to right, rgba(245, 245, 245, 0.8), rgba(245, 245, 245, 1)), 
     url(../assets/common-bg.svg);
+    padding-top: 120px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -42,6 +45,7 @@ html.swal2-shown, body.swal2-shown {
     margin: 30px 0;
 }
 .hero-home-inf .hero-home-description{
+    width: 800px;
     font-size: 1.1rem;
 }
 .hero-home-description span{
@@ -67,6 +71,7 @@ html.swal2-shown, body.swal2-shown {
 }
 .hero-home-email{
     margin-top: 2rem;
+    width: 800px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -141,3 +146,4 @@ html.swal2-shown, body.swal2-shown {
         top: 27px
     }
 }
+
