--- a/src/Estilos/social.css
+++ b/src/Estilos/social.css
@@ -51,6 +51,7 @@
         flex-direction: column;
         position: absolute;
         top: 50%;
+        left: 0;
         transform: translateY(-50%);
         
     }
