--- a/src/Estilos/about.css
+++ b/src/Estilos/about.css
@@ -12,6 +12,7 @@
 }
 .aboutSection .cont-about{
     display: flex;
+    flex-direction: column;
 }
 .about .cont-foto{
     width: 200px;
@@ -27,7 +28,6 @@
 }
 
 .about{
-    width: 50%;
     flex: 0 0 auto;
     display: flex;
     justify-content: center;
@@ -41,13 +41,13 @@
     color: var(--secondary-color);
 }
 .cont-about .cont-skills{
-    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .cont-about .cont-skills h2{
     color: var(--primary-color-3);
+    font-size: 3000px;
 }
 .cont-skills .skills{
     display: flex;
@@ -56,11 +56,12 @@
     margin-top: 20px;
 }
 .cont-skills .skills span{
+    width: 200px;
+    height: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 200px;
-    height: 200px;
+    justify-content: center;
     flex: 0 1 auto;
     box-sizing: border-box;
     text-align: center;
