--- a/src/Estilos/about.css
+++ b/src/Estilos/about.css
@@ -6,7 +6,7 @@
 
 .aboutSection h3{
     font-size: 1.5rem;
-    margin-bottom: 3rem;
+    margin-bottom: 0rem;
     color: var(--primary-color-3)
 
 }
@@ -29,10 +29,10 @@
 
 .about{
     flex: 0 0 auto;
+    width: 100%;
     display: flex;
     justify-content: center;
     text-align: center;
-    
 }
 .cont-about .about-description p{
     padding: 10px 40px;
@@ -56,8 +56,8 @@
     margin-top: 20px;
 }
 .cont-skills .skills span{
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -67,11 +67,22 @@
     text-align: center;
 }
 @media (min-width: 768px) {
-    
+    .cont-skills .skills span{
+        width: 190px;
+        height: 190px;
+    }
 }
 
-@media (min-width: 124px) {
-
+@media (min-width: 1024px) {
+    .about{
+        width: 50%;
+    }
+    .cont-skills{
+        width: 50%;
+    }
+    .aboutSection .cont-about {
+        flex-direction: row;
+    }
 }
 
 @media (max-width: 1280px) {
