--- a/src/Estilos/projects.css
+++ b/src/Estilos/projects.css
@@ -34,8 +34,8 @@ section h2 svg{
 }
 .article-project .cont-img-project{
     flex: 0 0 auto;
-    width: 350px;
-    height: 262.5px;
+    width: 340px;
+    height: 252.5px;
     margin-right: 1rem; 
     overflow: hidden;
     border-radius: 20px;
@@ -67,8 +67,9 @@ section h2 svg{
     padding: 10px 0;
 }
 .project-content .skills .skill{
-    padding: .5rem 1rem;
+    padding: .4rem .8rem;
     margin-right: .5rem;
+    font-size: .8rem;
     background-color: rgba(153, 153, 153, 0.2);
     border-radius: 5px;
     font-weight: 600;
@@ -108,6 +109,16 @@ section h2 svg{
     .article-project .cont-img-project{
         width: 400px;
         height: 300px;
+    }
+    .project-content .skills .skill{
+        padding: .5rem 1rem;
+        margin-right: .5rem;
+        background-color: rgba(153, 153, 153, 0.2);
+        border-radius: 5px;
+        font-weight: 600;
+        color: #3a3a3a;
+        margin-bottom: .5rem;
+        font-size: 1rem;
     }
 }
 
